corpus/cpp/template/case-15/snapshots/gcc13_14/single_sink_structured/render.ci.txt
src/main.cpp:17:22: error: template instantiation failed
help: start from the first user-owned template frame and match template arguments
why: no matching function for call to ‘Pair(int, const char [2])’
| src/main.cpp:17:22
|     Pair other(1, "x");
|                      ^
while instantiating:
  - src/main.cpp:11:5 candidate: ‘template<class T> Pair(T, T)-> Pair<T>’
  - src/main.cpp:17:22 deduced conflicting types for parameter ‘T’ (‘int’ and ‘const char*’)
  - src/main.cpp:10:8 candidate: ‘template<class T> Pair(Pair<T>)-> Pair<T>’
omitted 2 internal template frames
src/main.cpp:6:5: error: template instantiation failed
help: start from the first user-owned template frame and match template arguments
why: no matching function for call to ‘expect_ptr(int&)’
| src/main.cpp:6:5
note: omitted additional details; rerun with --formed-profile=verbose